Remove unnecessary use of minibuffer-completing-file-name. * lisp/ffap.el: Remove old code for obsolete package. (ffap-complete-as-file-p): Remove. * lisp/mh-e/mh-utils.el (minibuffer-completing-file-name): Don't declare.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-04-25  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* ffap.el: Remove old code for obsolete package.
+	(ffap-complete-as-file-p): Remove.
+
 	Use completion-table-with-quoting for comint and pcomplete.
 	* comint.el (comint--unquote&requote-argument)
 	(comint--unquote-argument, comint--requote-argument): New functions.
