Add "et al." to authors for emacs and elisp manuals.
This seems only fair, since there have been a large number of
contributors since the original ones.

* doc/emacs/emacs.texi:
* doc/lispref/book-spine.texi, doc/lispref/elisp.texi, doc/lispref/vol1.texi:
* doc/lispref/vol2.texi:
Add "et al." to authors.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
+	* emacs.texi: Add "et al." to authors.
+
 	* ack.texi, basic.texi, buffers.texi, building.texi:
 	* calendar.texi, cmdargs.texi, commands.texi, custom.texi:
 	* dired.texi, display.texi, emerge-xtra.texi, files.texi:
