--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
+	* book-spine.texi, elisp.texi, vol1.texi, vol2.texi:
+	Add "et al." to authors.
+
 	* buffers.texi, commands.texi, compile.texi, control.texi:
 	* customize.texi, display.texi, eval.texi, files.texi, frames.texi:
 	* hash.texi, help.texi, intro.texi, keymaps.texi, lists.texi:
