Remove doc/lispref/tindex.pl I think it is not needed any more.
* doc/lispref/tindex.pl: Remove file.
* make-dist: No more doc/lispref/tindex.pl.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
+	* tindex.pl: Remove file.
+
 	* makefile.w32-in (srcs):
 	* Makefile.in (srcs): Remove back.texi (which is unused).
 
