--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-26  Glenn Morris  <rgm@gnu.org>
+
+	* make-dist: No more doc/lispref/tindex.pl.
+
 2012-04-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* configure.in (dbus_validate_bus_name, dbus_validate_path)
