--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
+	* front-cover-1.texi: Remove file.
+
 	* tindex.pl: Remove file.
 
 	* makefile.w32-in (srcs):
