* doc/lispref/elisp-covers.texi: Remove file.
Nothing includes or refers to it, and it has not been updated since Emacs 19.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,6 +1,6 @@
 2012-04-26  Glenn Morris  <rgm@gnu.org>
 
-	* front-cover-1.texi: Remove file.
+	* elisp-covers.texi, front-cover-1.texi: Remove files.
 
 	* tindex.pl: Remove file.
 
