--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-26  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32menu.c: Include w32heap.h.
+	(add_menu_item): If the call to AppendMenuW (via
+	unicode_append_menu) fails, disable Unicode menus only if we are
+	running on Windows 9X/Me.
+
 2012-04-24  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* .gdbinit (xpr): Handle USE_2_TAGS_FOR_INTS.
