Replace lexical-let by lexical-binding (except Gnus, CEDET, ERT). * lisp/term/ns-win.el (ns-define-service): * lisp/progmodes/pascal.el (pascal-goto-defun): * lisp/progmodes/js.el (js--read-tab): * lisp/progmodes/etags.el (tags-lazy-completion-table): * lisp/emacs-lisp/syntax.el (syntax-propertize-via-font-lock): * lisp/emacs-lisp/ewoc.el (ewoc--wrap): * lisp/emacs-lisp/assoc.el (aput, adelete, amake): * lisp/doc-view.el (doc-view-convert-current-doc): * lisp/url/url.el (url-retrieve-synchronously): * lisp/vc/diff.el (diff-no-select): Replace lexical-let by lexical-binding.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,16 @@
+2012-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+
+	* term/ns-win.el (ns-define-service):
+	* progmodes/pascal.el (pascal-goto-defun):
+	* progmodes/js.el (js--read-tab):
+	* progmodes/etags.el (tags-lazy-completion-table):
+	* emacs-lisp/syntax.el (syntax-propertize-via-font-lock):
+	* emacs-lisp/ewoc.el (ewoc--wrap):
+	* emacs-lisp/assoc.el (aput, adelete, amake):
+	* doc-view.el (doc-view-convert-current-doc):
+	* vc/diff.el (diff-no-select): Replace lexical-let by lexical-binding.
+
 2012-04-26  Chong Yidong  <cyd@gnu.org>
 
 	* image.el (image-type-from-buffer): Only return supported image
